Fix reader view on mobile

--- a/styles/page-style.css
+++ b/styles/page-style.css
@@ -81,13 +81,13 @@ h1, h2, h3, h4 {
   text-align: center;
 }
 
-section {
+.section-top {
 	padding-right: 20px;
 	padding-left: 20px;
 }
 
 @media (max-width: 768px) {
-  section {
+  .section-top {
     padding: 0;
   }
 }
